@startuml

title __PK's Class Diagram__\n

  namespace  {
    namespace om.carlos.costura {
      namespace domain.model {
        namespace pk {
          class com.carlos.costura.domain.model.pk.LikePK {
              {static} - serialVersionUID : long
              + LikePK()
              + equals()
              + getPost()
              + getUser()
              + hashCode()
              + setPost()
              + setUser()
              + toString()
              # canEqual()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.carlos.costura {
      namespace domain.model {
        namespace pk {
          class com.carlos.costura.domain.model.pk.SaleItemPK {
              - item : Integer
              {static} - serialVersionUID : long
              + SaleItemPK()
              + SaleItemPK()
              {static} + builder()
              + equals()
              + getItem()
              + getPost()
              + hashCode()
              + setItem()
              + setPost()
              # canEqual()
          }
        }
      }
    }
  }
  

  namespace  {
    namespace om.carlos.costura {
      namespace domain.model {
        namespace pk {
          class com.carlos.costura.domain.model.pk.SaleItemPK.SaleItemPKBuilder {
              - item : Integer
              + build()
              + item()
              + post()
              + toString()
              ~ SaleItemPKBuilder()
          }
        }
      }
    }
  }
  

  com.carlos.costura.domain.model.pk.LikePK .up.|> java.io.Serializable
  com.carlos.costura.domain.model.pk.LikePK o-- com.carlos.costura.domain.model.Post : post
  com.carlos.costura.domain.model.pk.LikePK o-- com.carlos.costura.domain.model.User : user
  com.carlos.costura.domain.model.pk.SaleItemPK .up.|> java.io.Serializable
  com.carlos.costura.domain.model.pk.SaleItemPK o-- com.carlos.costura.domain.model.Post : post
  com.carlos.costura.domain.model.pk.SaleItemPK +-down- com.carlos.costura.domain.model.pk.SaleItemPK.SaleItemPKBuilder
  com.carlos.costura.domain.model.pk.SaleItemPK.SaleItemPKBuilder o-- com.carlos.costura.domain.model.Post : post


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
